# device

./: .gitignore  main.py  pyproject.toml  pytest.ini  update.py
resources/: AWB_2_AMR_WB_1_16.0kHZ_1.awb  IMY_3_imy_3.imy  M4A_4_AAC_LC_2_44.1kHZ_VBR_1.m4a  MP2_3_MPV1_L2_2_48.0kHZ_CBR_1.mp2  document.txt  ums.apk
src/: conf.py  deps.py
src/pom/: __init__.py  keyboard.py  store.py
src/pom/app/: appstore.py  (+10 more)
tests/: conftest.py  test_app_store.py
tests/test_complete_bluetooth/: test_bluetooth.py
tests/test_complete_calculator/: test_calculator.py
tests/test_complete_camera/: test_camera.py
tests/test_complete_chrome/: test_chrome_bookmark.py  test_chrome_download.py  test_chrome_homepage.py  test_chrome_more.py  test_chrome_setting.py
tests/test_complete_files/: test_files_document.py  test_files_download.py  test_files_image.py  test_files_local.py  test_files_more.py  test_files_recently.py  test_files_video.py  test_files_voice.py
tests/test_complete_gallery/: test_gallery_album.py  test_gallery_entire.py  test_gallery_picture.py  test_gallery_video.py
tests/test_complete_launcher/: test_launcher_function.py
tests/test_complete_music_ZR/: test_music_albums.py  test_music_artists.py  test_music_base_function.py  test_music_play_interface.py  test_music_playlists.py  test_music_songs.py
tests/test_iterator_appstore/: test_appstore.py
tests/test_iterator_bluetooth/: test_bluetooth.py
tests/test_iterator_calculator/: test_calculator.py
tests/test_iterator_chrome/: test_chrome.py
tests/test_iterator_desktopfolder/: test_desktop_folder.py
(+41 files in other folders)
